# groundwork

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  THEMING.md  overview.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 53cf65bfa5b4_add_password_reset_tokens_table.py  632db65253a0_add_auth_tables.py  9be7deac5364_add_timezone_to_last_login_at.py  a687fc7927a0_add_projects_and_project_members_tables.py  ccf68d53b6a5_add_issue_management_tables.py
api/: index.py
docker/: Dockerfile  docker-compose.yml
docs/issues/: 2016-01-30-issue-list.md  2026-01-19-p0.2-ui-issues.md
docs/plans/: 2026-01-18-p0.1-infrastructure-design.md  2026-01-18-p0.1-infrastructure-implementation.md  2026-01-19-admin-dashboard-design.md  2026-01-19-p0.2-authentication-design.md  2026-01-19-p0.2-authentication-implementation.md  2026-01-19-p0.2-bugfixes.md  2026-01-19-p0.2-ui-templates-design.md  2026-01-19-p0.2-ui-templates-implementation.md  2026-01-19-p0.3-project-management.md  2026-01-29-p0.4-issue-management-design.md
src/groundwork/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_main.py
tests/auth/: test_dependencies.py  test_models.py  test_providers.py  test_refresh_token.py  test_routes.py  test_services.py  test_utils.py
tests/core/: test_config.py  test_database.py  test_logging.py  test_seed.py
tests/factories/: __init__.py
tests/health/: __init__.py  test_routes.py  test_services.py
tests/issues/: test_routes.py  test_services.py
tests/profile/: __init__.py  test_routes.py  test_services.py
tests/projects/: __init__.py  test_models.py  (+2 more)
(+122 files in other folders)
